# 5genSearch-web

./: .gitignore  .lintstagedrc.json  .lintstagedrc.mjs  .oxfmtrc.json  .oxlintrc.json  .prettierignore  AGENTS.md  CHANGELOG.md  Cargo.toml  README.md  eslint.config.js  index.html  lingui.config.ts  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  release-please-config.json  rust-toolchain.toml  tsconfig.app.json  tsconfig.json  vite.config.ts  vitest.config.ts
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
.husky/: pre-commit  pre-push
public/: manifest.json
scripts/: audit-gen5-species-data.js  bench-wasm-node.mjs  copy-wasm.js  fetch-gen5-species-data.js  generate-icons.js  generate-species-data.js  optimize-wasm.js  pokeapi-gen5-species-data.js  scrape-encounters.js
wasm-pkg/: AGENTS.md  Cargo.toml  rustfmt.toml
wasm-pkg/benches/: datetime_search.rs  generator.rs  gpu_datetime_search.rs  gpu_mtseed_search.rs  mtseed_search.rs
wasm-pkg/src/: lib.rs
wasm-pkg/src/core/: bcd.rs  datetime_codes.rs  lcg.rs  mod.rs  needle.rs  offset.rs  seed_resolver.rs
wasm-pkg/src/core/mt/: mod.rs  scalar.rs  simd.rs
wasm-pkg/src/core/sha1/: message.rs  mod.rs  nazo.rs  scalar.rs  simd.rs
wasm-pkg/src/data/: abilities.rs  items.rs  mod.rs  names.rs  species.rs  stats.rs
wasm-pkg/src/datetime_search/: base.rs  egg.rs  mod.rs  mtseed.rs  trainer_info.rs  types.rs
wasm-pkg/src/generation/: mod.rs  seed_resolver.rs
wasm-pkg/src/generation/algorithm/: encounter.rs  game_offset.rs  iv.rs  mod.rs  nature.rs  needle.rs  npc.rs  offset.rs  pid.rs
wasm-pkg/src/generation/flows/: egg.rs  generator.rs  mod.rs  pokemon_static.rs  pokemon_wild.rs  types.rs
wasm-pkg/src/generation/flows/generator/: egg.rs  mod.rs  pokemon.rs
wasm-pkg/src/generation/flows/pokemon/: fishing.rs  mod.rs  normal.rs  phenomena.rs  static_encounter.rs  surfing.rs  wild.rs
wasm-pkg/src/gpu/: context.rs  limits.rs  mod.rs  profile.rs
wasm-pkg/src/gpu/datetime_search/: iterator.rs  mod.rs  pipeline.rs  searcher.rs  shader.wgsl
wasm-pkg/src/gpu/mtseed_search/: iterator.rs  mod.rs  pipeline.rs  shader.wgsl
wasm-pkg/src/misc/: mod.rs  mtseed_search.rs  needle_generator.rs  needle_search.rs
wasm-pkg/src/resolve/: egg.rs  mod.rs  pokemon.rs
wasm-pkg/src/types/: config.rs  filter.rs  generation.rs  keyinput.rs  mod.rs  needle.rs  pokemon.rs  search.rs  seeds.rs  ui.rs
wasm-pkg/tests/: frame_3ds_bw2.rs  resolve_integration.rs  wasm_bench.rs
(+652 files in other folders)
