[package]
name = "wasm-pkg"
version = "0.1.0"
edition = "2024"
authors = ["niart120"]
license = "MIT"
repository = "https://github.com/niart120/5genSearch-web"
description = "WASM calculation engine for Pokemon Gen5 RNG manipulation"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.108"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6.5"
tsify = { version = "0.5.6", default-features = false, features = ["js"] }

# Error handling in WASM
console_error_panic_hook = { version = "0.1", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3"

[lints.rust]
# Enable nightly features for Portable SIMD
unexpected_cfgs = { level = "warn", check-cfg = ["cfg(feature, values())"] }
