[package]
name = "wasm-pkg"
version = "0.1.0"
edition = "2024"
authors = ["niart120"]
license = "MIT"
repository = "https://github.com/niart120/5genSearch-web"
description = "WASM calculation engine for Pokemon Gen5 RNG manipulation"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]
gpu = ["dep:wgpu", "dep:web-sys", "dep:bytemuck", "dep:futures-channel"]

[dependencies]
wasm-bindgen = "0.2.108"
wasm-bindgen-futures = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6.5"
tsify = { version = "0.5.6", default-features = false, features = ["js"] }

# Error handling in WASM
console_error_panic_hook = { version = "0.1", optional = true }

# GPU support (optional)
wgpu = { version = "24", optional = true, default-features = false, features = ["webgpu", "wgsl"] }
web-sys = { version = "0.3", optional = true, features = ["Window", "Navigator", "Gpu"] }
bytemuck = { version = "1.21", optional = true, features = ["derive"] }
futures-channel = { version = "0.3", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3"
pollster = "0.4"
criterion = { version = "0.6", features = ["html_reports"] }

[[bench]]
name = "datetime_search"
harness = false

[[bench]]
name = "generator"
harness = false

[[bench]]
name = "mtseed_search"
harness = false

[[bench]]
name = "gpu_datetime_search"
harness = false
required-features = ["gpu"]

[lints.rust]
# Enable nightly features for Portable SIMD
unexpected_cfgs = { level = "warn", check-cfg = ["cfg(feature, values())"] }
